# glapp_framework

./: CHANGELOG  CMakeLists.txt  README
framework/: generate_code.py  test_python.py
framework/forms/: MainWindow.ui  framework_frame.ui  lightmanager_frame.ui
framework/include/: camera.h  framework.h  id.h  input.h  light.h  model.h  modelcontroller.h
framework/resources/: framework.qrc
framework/src/: Mainwindow.cpp  Mainwindow.h  camera.cpp  framework_impl.cpp  framework_impl.h  glwidget.cpp  glwidget.h  id.cpp  input.cpp  light_impl.cpp  light_impl.h  model.cpp  modelcontroller.cpp  quat.cpp  quat.h
utls/include/: VertexRenderer.h  cpputils.h  glutils.h  logutil.h  vecutils.h
utls/shaders/: flat_tetrahedrons.geom  flat_triangles.geom
utls/src/: glutils_buffer_object.cpp  glutils_impl.cpp  glutils_impl.h  glutils_tetrahedron_renderer.cpp  glutils_text_renderer.cpp  glutils_triangle_renderer.cpp
